# ros2-pkg-create

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  copier.yml  create_ros2_pkg.py  package.xml  requirements.txt
.github/workflows/: check-samples.yml  generate-and-test.yml  publish.yml
ros2-pkg-create/: pyproject.toml
ros2-pkg-create/src/ros2_pkg_create/: __init__.py  __main__.py  copier.yml
ros2_cpp_pkg/: cookiecutter.json  copier.yml
ros2_cpp_pkg/{{ cookiecutter.package_name }}/: CMakeLists.txt  package.xml
ros2_cpp_pkg/{{ cookiecutter.package_name }}/config/: params.yaml
ros2_cpp_pkg/{{ cookiecutter.package_name }}/include/{{ cookiecutter.package_name }}/: {{ cookiecutter.node_name }}.hpp
ros2_cpp_pkg/{{ cookiecutter.package_name }}/launch/: {{ cookiecutter.node_name }}_launch.py  {{ cookiecutter.node_name }}_launch.xml  {{ cookiecutter.node_name }}_launch.yaml
ros2_cpp_pkg/{{ cookiecutter.package_name }}/src/: {{ cookiecutter.node_name }}.cpp
ros2_cpp_pkg/{{ package_name }}/: CMakeLists.txt.jinja  package.xml.jinja
ros2_cpp_pkg/{{ package_name }}/config/: params.yaml.jinja
ros2_cpp_pkg/{{ package_name }}/launch/: {{ node_name }}_launch.py.jinja  {{ node_name }}_launch.xml.jinja  {{ node_name }}_launch.yml.jinja
ros2_cpp_pkg/{{ package_name }}/src/: {{ node_name }}.cpp.jinja
ros2_cpp_pkg/{{ package_name }}/{% if has_launch_file %}launch{% endif %}/: {% if launch_file_type == 'xml' %}{{ node_name }}_launch.xml{% endif %}.jinja  {% if launch_file_type == 'yml' %}{{ node_name }}_launch.yml{% endif %}.jinja
ros2_pkg_create/: __init__.py  create_pkg.py
ros_cpp_pkg/: CMakeLists.txt  README.md  package.xml
ros_cpp_pkg/config/: params.yaml
ros_cpp_pkg/include/ros_cpp_pkg/: ros_node.hpp
ros_cpp_pkg/launch/: ros_node_launch.py  ros_node_launch.xml  ros_node_launch.yaml
ros_cpp_pkg/src/: ros_node.cpp
samples/: generate_samples.sh
samples/ros2_cpp_all_pkg/: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
samples/ros2_cpp_all_pkg/include/ros2_cpp_all_pkg/: ros2_cpp_node.hpp
samples/ros2_cpp_all_pkg/launch/: ros2_cpp_node_launch.py
samples/ros2_cpp_all_pkg/src/: ros2_cpp_node.cpp
samples/ros2_cpp_all_pkg_interfaces/: CMakeLists.txt  README.md  package.xml
samples/ros2_cpp_component_pkg/: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
samples/ros2_cpp_component_pkg/config/: params.yml
samples/ros2_cpp_component_pkg/launch/: ros2_cpp_node_launch.py
samples/ros2_cpp_component_pkg/src/: ros2_cpp_node.cpp
samples/ros2_cpp_lifecycle_pkg/: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
samples/ros2_cpp_lifecycle_pkg/include/ros2_cpp_lifecycle_pkg/: ros2_cpp_lifecycle_node.hpp  ros2_cpp_node.hpp
samples/ros2_cpp_lifecycle_pkg/launch/: ros2_cpp_lifecycle_node_launch.py  ros2_cpp_node_launch.py
samples/ros2_cpp_lifecycle_pkg/src/: ros2_cpp_lifecycle_node.cpp  ros2_cpp_node.cpp
samples/ros2_cpp_pkg/: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
samples/ros2_cpp_pkg/launch/: ros2_cpp_node_launch.py
samples/ros2_cpp_pkg/src/: ros2_cpp_node.cpp
samples/ros2_interfaces_pkg/: CMakeLists.txt  README.md  package.xml
samples/ros2_python_all_pkg/: .gitlab-ci.yml  README.md  package.xml  setup.cfg  setup.py
samples/ros2_python_all_pkg/launch/: ros2_python_node_launch.py
samples/ros2_python_all_pkg/ros2_python_all_pkg/: ros2_python_node.py
samples/ros2_python_all_pkg_interfaces/: CMakeLists.txt  README.md  package.xml
samples/ros2_python_pkg/: .gitlab-ci.yml  README.md  package.xml  setup.py
samples/ros2_python_pkg/launch/: ros2_python_node_launch.py
samples/ros2_python_pkg/ros2_python_pkg/: ros2_python_node.py
template_cpp_pkg/: CMakeLists.txt  CMakeLists.txt.jinja2  cookiecutter.json  package.xml  package.xml.jinja2
template_cpp_pkg/config/: params.yaml  params.yaml.jinja2
template_cpp_pkg/include/template_cpp_pkg/: TemplateNode.hpp
template_cpp_pkg/include/{{ package_name }}/: TemplateNode.hpp.jinja2
template_cpp_pkg/launch/: template_node_launch.py  template_node_launch.py.jinja2  template_node_launch.xml  template_node_launch.xml.jinja2  template_node_launch.yaml  template_node_launch.yaml.jinja2
template_cpp_pkg/src/: TemplateNode.cpp  TemplateNode.cpp.jinja2
template_cpp_pkg/{{ cookiecutter.package_name }}/: CMakeLists.txt  package.xml
template_cpp_pkg/{{ cookiecutter.package_name }}/config/: params.yaml
template_cpp_pkg/{{ cookiecutter.package_name }}/launch/: template_node_launch.xml  template_node_launch.yaml  {{ cookiecutter.node_name }}_launch.py
template_cpp_pkg/{{ cookiecutter.package_name }}/src/: TemplateNode.cpp
templates/ci/: {% if add_pre_commit %} .pre-commit-config.yaml {% endif %}  {% if add_pre_commit %}.pre-commit-config.yaml{% endif %}  {% if ci_type == 'github'  %}dependencies.repos{% endif %}  {% if ci_type == 'gitlab'  %}.gitlab-ci.yml{% endif %}  {% if ci_type == 'gitlab'  %}.gitlab-ci.yml{% endif %}.jinja
templates/cpp_pkg/{% if has_action_server %}{{ package_name }}_msgs{% endif %}/: package.xml.jinja
templates/cpp_pkg/{{ package_name }}/: CMakeLists.txt.jinja  README.md.jinja  package.xml.jinja
templates/launch_pkg/{{ package_name }}/: CMakeLists.txt.jinja  package.xml.jinja
templates/msgs_pkg/{{ package_name }}/: CMakeLists.txt.jinja  package.xml.jinja
templates/python_cmake_pkg/{% if has_action_server %}{{ package_name }}_msgs{% endif %}/: CMakeLists.txt.jinja  package.xml.jinja
templates/python_cmake_pkg/{{ package_name }}/: CMakeLists.txt.jinja  README.md.jinja  package.xml.jinja  {% if use_venv %}requirements.txt{% endif %}  {% if use_venv %}setup_env.bash{% endif %}
templates/python_pkg/{% if has_action_server %}{{ package_name }}_msgs{% endif %}/: README.md.jinja
templates/python_pkg/{{ package_name }}/: package.xml.jinja  setup.cfg.jinja
templates/ros2_cpp_pkg/{% if has_action_server %}template_interfaces_pkg{% endif %}/: CMakeLists.txt  package.xml
templates/ros2_cpp_pkg/{% if has_action_server %}{{ package_name }}_interfaces{% endif %}/: CMakeLists.txt.jinja  package.xml.jinja
(+45 files in other folders)
