<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_pkg_create</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="schmidt@sim.tu-darmstadt.de">Aljoscha Schmidt</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>python3-git</depend>
  <depend>copier</depend>
  <depend>jinja2_strcase</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>