[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ros2-pkg-create"
version = "1.0.1"
description = "Powerful ROS 2 Package Generator"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    {name = "Lennart Reiher", email = "lennart.reiher@rwth-aachen.de"},
    {name = "Jean-Pierre Busch", email = "jean-pierre.busch@rwth-aachen.de"},
]
maintainers = [
    {name = "Lennart Reiher", email = "lennart.reiher@rwth-aachen.de"},
    {name = "Jean-Pierre Busch", email = "jean-pierre.busch@rwth-aachen.de"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
keywords = ["ros", "ros2"]
dependencies = ["argcomplete~=3.2.3", "copier~=9.2.0", "jinja2-strcase~=0.0.2"]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
"Repository" = "https://github.com/ika-rwth-aachen/ros2-pkg-create"
"Bug Tracker" = "https://github.com/ika-rwth-aachen/ros2-pkg-create/issues"

[project.scripts]
ros2-pkg-create = "ros2_pkg_create.__main__:main"

[tool.setuptools.package-data]
ros2_pkg_create = ["copier.yml", "templates/**"]