<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>{{ cookiecutter.package_name }}</name>
  <version>0.0.0</version>
  <description>{{ cookiecutter.description }}</description>

  <maintainer email="{{ cookiecutter.maintainer_email }}">{{ cookiecutter.maintainer }}</maintainer>
  <author email="{{ cookiecutter.author_email }}">{{ cookiecutter.author }}</author>

  <license>{{ cookiecutter.license }}</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
