<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>ros2_cpp_lifecycle_pkg</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <maintainer email="todo@TODO.com">TODO</maintainer>
  <author email="todo@TODO.com">TODO</author>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
